--- a/web/author_display/webapp/view/Detail.view.xml
+++ b/web/author_display/webapp/view/Detail.view.xml
@@ -57,16 +57,16 @@
 				<headerContent>
 					<m:FlexBox wrap="Wrap" fitContainer="true" alignItems="Stretch">
 						<m:VBox justifyContent="Center" class="sapUiSmallMarginEnd">
-							<m:Label text="Main Category"/>
-							<m:Text text="{authors>name}"/>
+							<m:Label text="Street"/>
+							<m:Text text="{authors>toAddress/strt}"/>
 						</m:VBox>
 						<m:VBox justifyContent="Center" class="sapUiSmallMarginEnd">
-							<m:Label text="Subcategory"/>
-							<m:Text text="{authors>name}"/>
+							<m:Label text="Home number"/>
+							<m:Text text="{authors>toAddress/hnum}"/>
 						</m:VBox>
 						<m:VBox justifyContent="Center" class="sapUiSmallMarginEnd">
-							<m:Label text="Price"/>
-							<m:ObjectNumber number="{authors>name} {authors>author_id}" emphasized="false"/>
+							<m:Label text="City"/>
+							<m:ObjectNumber number="{authors>toAddress/city}" emphasized="false"/>
 						</m:VBox>
 					</m:FlexBox>
 				</headerContent>
@@ -103,13 +103,15 @@
 					<ObjectPageSubSection>
 						<blocks>
 							<m:Table id="booksTable"
-									 items="{path : 'authors>/Books'}">
+									 items="{path : 'authors>toBooks'}">
 								<m:columns>
+									<m:Column />
 									<m:Column />
 								</m:columns>
 								<m:items>
 									<m:ColumnListItem type="Navigation" press="handleItemPress">
 										<m:cells>
+											<m:ObjectIdentifier text="{authors>book_id}" />
 											<m:ObjectIdentifier text="{authors>name}" />
 										</m:cells>
 									</m:ColumnListItem>
