--- a/web/author_display/webapp/view/Detail.view.xml
+++ b/web/author_display/webapp/view/Detail.view.xml
@@ -107,8 +107,12 @@
 							<m:Table id="booksTable"
 									 items="{path : 'authors>toBooks'}">
 								<m:columns>
-									<m:Column />
-									<m:Column />
+									<m:Column>
+										<m:Text text="{i18n>bookId}"/>
+									</m:Column>
+									<m:Column>
+										<m:Text text="{i18n>bookName}"/>
+									</m:Column>
 								</m:columns>
 								<m:items>
 									<m:ColumnListItem type="Navigation" press="handleItemPress">
