Add some bundles

--- a/web/author_display/webapp/view/Master.view.xml
+++ b/web/author_display/webapp/view/Master.view.xml
@@ -8,9 +8,7 @@
 		<f:title>
 			<f:DynamicPageTitle>
 				<f:heading>
-					<Title
-                            id="authorsTableTitle"
-                    />
+					<Title id="authorsTableTitle" text="{config>/authorsTableTitle/value}"/>
 				</f:heading>
 			</f:DynamicPageTitle>
 		</f:title>
