Scopes not works, refactoring need

--- a/javaCFMTA/service/src/main/resources/templates/jwt.html
+++ b/javaCFMTA/service/src/main/resources/templates/jwt.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Auth</title>
+<head> <meta charset="UTF-8">
+	<title>Spring Boot</title>
 </head>
 <body>
-	<h2>Scopes:</h2>
-	<ul th:each="scope: ${scopes}">
-		<li th:text="${scope}">authority</li>
-	</ul>
-	<h2>Token info:</h2>
-	<p>TOKEN:</p>
-	<p th:text="${token.token}">token:</p>
-	<p>SIGNATURE:</p>
-	<p th:text="${token.signature}">signature:</p>
-	<p>HEADER:</p>
-	<p th:text="${token.header}">header:</p>
-	<p>PAYLOAD:</p>
-	<p th:text="${token.payload}">payload:</p>
-	<h3>Claims:</h3>
-	<ul th:each="claim: ${token.claimList}">
-		<li th:text="${claim.name} + ': ' + ${claim.value}">name: value</li>
-	</ul>
+	<p th:text="'Token: ' + ${token}">token: </p>
+	<p th:text="'Name: ' + ${name}">name: </p>
+	<p th:text="'Family name: ' + ${familyname}">Family name: </p>
 </body>
 </html>
